--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "description": "Lichess with Chessy.",
   "scripts": {
-    "build": "rm -rf dist && node create-env.js && webpack --config webpack.prod.js",
+    "build": "rm -rf dist && node create-env.js && npx webpack --config webpack.prod.js",
     "clean": "rm -f yarn-*.log && rm -f yarn.lock && rm -rf node_modules && yarn cache clean",
     "clean:api": "rm -f functions/api/npm-*.log && rm -f functions/api/package-lock.json && rm -rf functions/api/node_modules",
     "clean:authorize": "rm -f functions/authorize/npm-*.log && rm -f functions/authorize/package-lock.json && rm -rf functions/authorize/node_modules",
-    "lint": "prettier-standard --lint",
+    "lint": "npx prettier-standard --lint",
     "nuke": "rm -f .yarnrc && yarn run clean && yarn && git checkout .yarnrc && yarn run nuke:api && yarn run nuke:authorize",
     "nuke:api": "yarn run clean:api && cd functions/api && npm install",
     "nuke:authorize": "yarn run clean:authorize && cd functions/authorize && npm install",
-    "start": "node create-env.js && webpack-dev-server --config webpack.dev.js",
-    "start:dev": "netlify dev",
+    "start": "node create-env.js && npx webpack-dev-server --config webpack.dev.js",
+    "start:dev": "rm -f .env && npx netlify dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "upgrade": "npx upgradeps && yarn run upgrade:api && yarn run upgrade:authorize",
     "upgrade:api": "cd functions/api && npx upgradeps -n",
