--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@reduxjs/toolkit": "^1.4.0",
     "antd": "^4.3.5",
     "axios": "^0.19.2",
+    "can-ndjson-stream": "^1.0.2",
     "chessboardjsx": "^2.4.2",
+    "oboe": "^2.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
