--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "description": "Lichess with Chessy.",
   "scripts": {
     "build": "rm -rf dist && node create-env.js && npx webpack --config webpack.prod.js",
-    "clean": "rm -f yarn-*.log && rm -f yarn.lock && rm -rf node_modules && yarn cache clean",
+    "clean": "rm -f npm-*.log && rm -f package-lock.json && rm -rf node_modules && npm cache verify",
     "clean:api": "rm -f functions/api/npm-*.log && rm -f functions/api/package-lock.json && rm -rf functions/api/node_modules",
     "clean:authorize": "rm -f functions/authorize/npm-*.log && rm -f functions/authorize/package-lock.json && rm -rf functions/authorize/node_modules",
     "lint": "npx prettier-standard --lint",
-    "nuke": "rm -f .yarnrc && yarn run clean && yarn && git checkout .yarnrc && yarn run nuke:api && yarn run nuke:authorize",
-    "nuke:api": "yarn run clean:api && cd functions/api && npm install",
-    "nuke:authorize": "yarn run clean:authorize && cd functions/authorize && npm install",
+    "nuke": "npm run clean && npm install && npm run nuke:api && npm run nuke:authorize",
+    "nuke:api": "npm run clean:api && cd functions/api && npm install",
+    "nuke:authorize": "npm run clean:authorize && cd functions/authorize && npm install",
     "start": "node create-env.js && npx webpack-dev-server --config webpack.dev.js",
     "start:dev": "rm -f .env && npx netlify dev",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "upgrade": "npx upgradeps && yarn run upgrade:api && yarn run upgrade:authorize",
+    "upgrade": "npx upgradeps -n && npm run upgrade:api && npm run upgrade:authorize",
     "upgrade:api": "cd functions/api && npx upgradeps -n",
     "upgrade:authorize": "cd functions/authorize && npx upgradeps -n"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.4.0",
-    "antd": "^4.3.5",
+    "antd": "^4.4.0",
     "axios": "^0.19.2",
     "can-ndjson-stream": "^1.0.2",
     "chessboardjsx": "^2.4.2",
@@ -29,25 +29,25 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.0",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "@babel/preset-react": "^7.10.1",
+    "@babel/core": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
     "@svgr/webpack": "^5.4.0",
     "babel-loader": "^8.1.0",
-    "copy-webpack-plugin": "^6.0.2",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
     "dotenv-webpack": "^1.8.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "netlify-cli": "^2.54.0",
+    "netlify-cli": "^2.57.0",
     "prettier-standard": "^16.3.0",
-    "source-map-loader": "^1.0.0",
+    "source-map-loader": "^1.0.1",
     "style-loader": "^1.2.1",
-    "upgradeps": "^1.4.0",
+    "upgradeps": "^1.4.1",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
