--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npx lint-staged"
     }
   },
   "author": "Luciano Ropero <lropero@gmail.com>",
